syntax = "proto3";

package auth;

option go_package = "./pkg/auth-svc/pb";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterReply) {}
  rpc Login(LoginRequest) returns (LoginReply) {}
  rpc Validate(ValidateRequest) returns (ValidateReply) {}
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterReply {
  int64 status = 1;
  string error = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginReply {
  int64 status = 1;
  string error = 2;
  string token = 3;
}

message ValidateRequest {
  string token = 1;
}

message ValidateReply {
  int64 status = 1;
  string error = 2;
  int64 userId = 3;
}